final fixes of iphone backface-visibility issue

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -83,6 +83,7 @@
   z-index: -1;
   object-fit: cover;
   overflow: hidden;
+  filter: brightness(15%);
 }
 
 .project__img img {
